<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">


    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.myapplication.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_to_searchResult"
            app:destination="@id/searchResultFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>



    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.myapplication.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/searchResultFragment"
        android:name="com.example.myapplication.ui.search_result.SearchResultFragment"
        android:label="周辺のグルメ"
        tools:layout="@layout/fragment_search_result">
        <action
            android:id="@+id/action_searchResultFragment_to_shopInformationFragment2"
            app:destination="@id/shopInformationFragment"
            app:enterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/searchResultFragment" />
    </fragment>
    <fragment
        android:id="@+id/shopInformationFragment"
        android:name="com.example.myapplication.ui.shop_information.ShopInformationFragment"
        android:label="店舗詳細"
        tools:layout="@layout/fragment_shop_information">
        <argument
            android:name="selectedGourmetData"
            app:argType="com.example.myapplication.models.Shop" />
    </fragment>
</navigation>